CSS Cursor Style URL No Longer Works In Image Maps
Categories
(Core :: Layout, defect)
Tracking
()
People
(Reporter: linux4me, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:69.0) Gecko/20100101 Firefox/69.0
Steps to reproduce:
Assign a CSS cursor value "url" to an image map area using a valid 32 x 32 pixel *.cur or *.png image:
#imagemap area {
cursor: url(https://i.postimg.cc/HLpnLftr/X.png),auto;
}
I set up a JSFiddle where you can test the various cursor styles in both a normal div element (where the cursor url value still works) and in an image map:
https://jsfiddle.net/linux4me/vn6kacg2/
Actual results:
The cursor does not use the image specified by the URL, but uses the default pointer.
Expected results:
The cursor should change to the image specified by the URL within the boundaries of the image map area. In other browsers; e.g., Chromium 77.0.3865.90, it works as it should.
| Assignee | ||
Comment 1•6 years ago
|
||
This worked in 66.
| Assignee | ||
Comment 2•6 years ago
|
||
This is the regression range I got: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=476293c6700fb45da40b8096184211432a89be57&tochange=de51545099a617602be187d1c0f68ff2a87d6fb2
I haven't dug deeper, but I'd bet bug 1445844 broke it.
| Assignee | ||
Comment 3•6 years ago
|
||
Hmm, actually, it's bug 1525134 what is to blame. Same person who broke it though, d'oh :/
| Assignee | ||
Comment 4•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
| bugherder | ||
Comment 7•6 years ago
|
||
Is this something we should consider uplifting or should it ride Fx72 to release?
| Assignee | ||
Comment 8•6 years ago
|
||
Same, really minor fix for a 69 regression, could be worth an uplift.
Comment 9•6 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #8)
Same, really minor fix for a 69 regression, could be worth an uplift.
If you think this is worth it, don't hesitate to request the uplift, thanks.
| Assignee | ||
Comment 10•6 years ago
|
||
Comment on attachment 9103113 [details]
Bug 1590191 - Trigger image loads for <area> cursor styles.
Beta/Release Uplift Approval Request
- User impact if declined: Some custom cursors don't work on <area> element.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very low-risk, just triggers the loads to preserve old behavior.
- String changes made/needed: none
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 11•6 years ago
|
||
I verified this issue on Mac OS X 10.14, Windows 10 x64 and Ubuntu 16.04 with FF Nightly 72.0a1(2019-11-04) and I can confirm the fix.
Comment 12•6 years ago
|
||
Comment on attachment 9103113 [details]
Bug 1590191 - Trigger image loads for <area> cursor styles.
Low risk layout bug with tests and verified on Nightly, uplift approved for 71 beta 8, thanks.
Comment 13•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Comment 14•6 years ago
|
||
I verified this issue on Mac OS X 10.14, Windows 10 x64 and Ubuntu 16.04 with FF Beta 71.0b8 and I can confirm the fix.
Updated•4 years ago
|
Description
•