Bug 1590191 - Trigger image loads for <area> cursor styles. r=heycam

Differential Revision: https://phabricator.services.mozilla.com/D49998